--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       
       
       <div class="bottom">
-        <a class="footer-link" href="www.linkedin.com/in/pradeep-kumar-1807-">LinkedIn</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/pradeep-kumar-1807-/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/PRADEEP_1807">Twitter</a>
         <a class="footer-link" href="https://www.instagram.com/pradeep_kumar_1807/">Instagram</a>
         <p class="copr">© PRADEEP KUMAR</p>
